# korean-law-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  README_PyPI.md  debug_inspect_fastmcp.py  debug_relationships.py  korean_law_mcp.spec  pyproject.toml
.agent/workflows/: deploy.md
.github/workflows/: auto_release.yml  build_windows.yml  publish_pypi.yml  release_pipeline.yml
docs/: PUBLISH.md
examples/: demo_usage.py
scripts/: bump_version.py  inspect_targets.py  publish.py  test_deep_search.py
src/: main.py
src/korean_law_mcp/: api_client.py  main.py  prompts.py  resources.py  server.py  tools.py  utils.py
tests/: comprehensive_test.py  prompt_test.py  resource_test.py  stress_test.py  test_agentic_flow.py  test_comprehensive.py  test_new_tools.py  test_prompts.py  test_resources.py  test_stress.py  test_tools.py
