[project]
name = "korean-law-mcp"
version = "0.1.0"
description = "MCP Server for Korean Law Open API"
dependencies = [
    "mcp[cli]>=0.1.0",
    "requests>=2.31.0",
    "xmltodict>=0.13.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
urls = { Repository = "https://github.com/yourusername/korean-law-mcp" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "tests",
  "scripts",
  "docs",
  ".github",
  ".dockerignore",
  "Dockerfile",
  "PUBLISH.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
korean-law-mcp = "src.main:main"
