[project]
name = "korean-law-mcp"
version = "0.1.5"
description = "MCP Server for Korean Law Open API"
dependencies = [
    "mcp[cli]>=0.1.0",
    "requests>=2.31.0",
    "xmltodict>=0.13.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.10"
readme = "README_PyPI.md"
license = "MIT"
authors = [
    { name = "Seo Jinseok", email = "truestone@gmail.com" }
]
urls = { Repository = "https://github.com/seo-jinseok/korean-law-mcp" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "tests",
  "scripts",
  "docs",
  ".github",
  ".dockerignore",
  "Dockerfile",
  "PUBLISH.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/korean_law_mcp"]

[project.scripts]
korean-law-mcp = "korean_law_mcp.main:main"
